-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 RC 1
-
None
-
Qt5 on xcb
-
1a653225f6c73d7ca32aa6cdcde45ba9462a7b72
Press and release events of XButton1/2 seem to be broken in current Qt5. When the attached example is compiled the debug output shows how strange these buttons are handled in the xcb plugin at the moment.
To reproduce just do the following:
1) Press and hold XButton 1 or 2
2) Move the mouse
3) Release the button
4) Move the mouse again
Expected outcome for steps:
1) XButton pressed
2)
3) XButton released
4)
Actual outcome for steps:
1) XButton pressed
2) XButton released
3) XButton pressed
4) XButton released