src/plugins/platforms/xcb/qxcbwindow.cpp
@@ -1464,53 +1464,6 @@ void QXcbWindow::handleUnmapNotifyEvent(const xcb_unmap_notify_event_t *event)
     }
 }
 
-static Qt::MouseButtons translateMouseButtons(int s)
-{
-    Qt::MouseButtons ret = 0;
-    if (s & XCB_BUTTON_MASK_1)
-        ret |= Qt::LeftButton;
-    if (s & XCB_BUTTON_MASK_2)
-        ret |= Qt::MidButton;
-    if (s & XCB_BUTTON_MASK_3)
-        ret |= Qt::RightButton;
-    return ret;
-}
-
-static Qt::MouseButton translateMouseButton(xcb_button_t s)
-{
-    switch (s) {
-    case 1: return Qt::LeftButton;
-    case 2: return Qt::MidButton;
-    case 3: return Qt::RightButton;
-    // Button values 4-7 were already handled as Wheel events, and won't occur here.
-    case 8: return Qt::BackButton;      // Also known as Qt::ExtraButton1
-    case 9: return Qt::ForwardButton;   // Also known as Qt::ExtraButton2
-    case 10: return Qt::ExtraButton3;
-    case 11: return Qt::ExtraButton4;
-    case 12: return Qt::ExtraButton5;
-    case 13: return Qt::ExtraButton6;
-    case 14: return Qt::ExtraButton7;
-    case 15: return Qt::ExtraButton8;
-    case 16: return Qt::ExtraButton9;
-    case 17: return Qt::ExtraButton10;
-    case 18: return Qt::ExtraButton11;
-    case 19: return Qt::ExtraButton12;
-    case 20: return Qt::ExtraButton13;
-    case 21: return Qt::ExtraButton14;
-    case 22: return Qt::ExtraButton15;
-    case 23: return Qt::ExtraButton16;
-    case 24: return Qt::ExtraButton17;
-    case 25: return Qt::ExtraButton18;
-    case 26: return Qt::ExtraButton19;
-    case 27: return Qt::ExtraButton20;
-    case 28: return Qt::ExtraButton21;
-    case 29: return Qt::ExtraButton22;
-    case 30: return Qt::ExtraButton23;
-    case 31: return Qt::ExtraButton24;
-    default: return Qt::NoButton;
-    }
-}
-
 void QXcbWindow::handleButtonPressEvent(const xcb_button_press_event_t *event)
 {
     updateNetWmUserTime(event->time);
@@ -1532,7 +1485,7 @@ void QXcbWindow::handleButtonPressEvent(const xcb_button_press_event_t *event)
         return;
     }
 
-    handleMouseEvent(event->detail, event->state, event->time, local, global, modifiers);
+    handleMouseEvent(event->time, local, global, modifiers);
 }
 
 void QXcbWindow::handleButtonReleaseEvent(const xcb_button_release_event_t *event)
@@ -1541,7 +1494,12 @@ void QXcbWindow::handleButtonReleaseEvent(const xcb_button_release_event_t *even
     QPoint global(event->root_x, event->root_y);
     Qt::KeyboardModifiers modifiers = connection()->keyboard()->translateModifiers(event->state);
 
-    handleMouseEvent(event->detail, event->state, event->time, local, global, modifiers);
+    if (event->detail >= 4 && event->detail <= 7) {
+        // mouse wheel, handled in handleButtonPressEvent()
+        return;
+    }
+
+    handleMouseEvent(event->time, local, global, modifiers);
 }
 
 void QXcbWindow::handleMotionNotifyEvent(const xcb_motion_notify_event_t *event)
@@ -1550,19 +1508,13 @@ void QXcbWindow::handleMotionNotifyEvent(const xcb_motion_notify_event_t *event)
     QPoint global(event->root_x, event->root_y);
     Qt::KeyboardModifiers modifiers = connection()->keyboard()->translateModifiers(event->state);
 
-    handleMouseEvent(event->detail, event->state, event->time, local, global, modifiers);
+    handleMouseEvent(event->time, local, global, modifiers);
 }
 
-void QXcbWindow::handleMouseEvent(xcb_button_t detail, uint16_t state, xcb_timestamp_t time, const QPoint &local, const QPoint &global, Qt::KeyboardModifiers modifiers)
+void QXcbWindow::handleMouseEvent(xcb_timestamp_t time, const QPoint &local, const QPoint &global, Qt::KeyboardModifiers modifiers)
 {
     connection()->setTime(time);
-
-    Qt::MouseButtons buttons = translateMouseButtons(state);
-    Qt::MouseButton button = translateMouseButton(detail);
-
-    buttons ^= button; // X event uses state *before*, Qt uses state *after*
-
-    QWindowSystemInterface::handleMouseEvent(window(), time, local, global, buttons, modifiers);
+    QWindowSystemInterface::handleMouseEvent(window(), time, local, global, connection()->buttons(), modifiers);
 }
 
 class EnterEventChecker
